--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -46,7 +46,10 @@
 			transition: all 0.05s ease-in-out; width: 100%;
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
-		.item.active { background: #f3f2ec; }
+		.item.active:before {
+			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
+			opacity: 0.15;
+		}
 		
 		.item {
 			.name { display: inline-block; vertical-align: top; }
@@ -64,6 +67,29 @@
 			.smile {
 				.icon.blank { margin: 0px; width: 18px; height: 18px; }
 			}
+		}
+		
+		.item.withDescription {
+			.icon { width: 32px; height: 32px; background-size: 20px 20px; border-radius: 6px; position: absolute; left: 16px; top: 8px; }
+			.descr { @include text-small; height: 18px; color: $colorDarkGrey; }
+			.info { padding-left: 40px; }
+			.name { line-height: 22px; }
+		}
+		
+		.item.yellow {
+			.icon { background-color: #fef3c5; }  
+		}
+		.item.green {
+			.icon { background-color: #d6f5f3; }  
+		}
+		.item.blue {
+			.icon { background-color: #d6effd; }  
+		}
+		.item.red {
+			.icon { background-color: #ffebe5; }  
+		}
+		.item.purple {
+			.icon { background-color: #f4e3fa; }  
 		}
 		
 		.section { border-bottom: 1px solid $colorLightGrey; padding: 8px 0px; }
