--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -14,7 +14,7 @@
 		.content { max-height: 500px; }
 	}
 	
-	.menu.menuBlockAdd, .menu.menuBlockStyle {
+	.menu.menuBlockAdd {
 		.item.withColor {
 			.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
 			.icon.list { background-image: url('~img/icon/menu/action/block/list1.svg'); }
