--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -76,19 +76,19 @@
 			.name { line-height: 22px; }
 		}
 		
-		.item.yellow {
+		.item.withDescription.yellow {
 			.icon { background-color: #fef3c5; }  
 		}
-		.item.green {
+		.item.withDescription.green {
 			.icon { background-color: #d6f5f3; }  
 		}
-		.item.blue {
+		.item.withDescription.blue {
 			.icon { background-color: #d6effd; }  
 		}
-		.item.red {
+		.item.withDescription.red {
 			.icon { background-color: #ffebe5; }  
 		}
-		.item.purple {
+		.item.withDescription.purple {
 			.icon { background-color: #f4e3fa; }  
 		}
 		
