new smile menu, fixes

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -54,6 +54,10 @@ html.debug {
 			
 			.section > .name { background-color: rgba(0,0,255,0.1); }
 		}
+		
+		.menu.horizontal {
+			.icon { background-color: rgba(0,0,255,0.1); }
+		}
 	}
 	
 	.inputWithFile {
