--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -3,6 +3,7 @@
 .menus {
 	.menu.menuBlockContext { padding: 0px; height: 44px; transform-origin: 50% 50% !important; }
 	.menu.menuBlockContext {
+		.icon { vertical-align: top; }
 		.icon.blockStyle { width: 32px; background-size: 20px 20px; background-position: 0px center; }
 		
 		.icon.blockStyle.active.text { background-image: url('~img/icon/menu/style/text.svg'); }
