--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -1,19 +1,19 @@
 @import "~scss/_vars";
 
-.smile { 
-	display: inline-block; vertical-align: top; text-align: center; width: 20px; height: 20px; line-height: 20px;
-	position: relative; 
-}
+.smile { display: inline-block; vertical-align: top; text-align: center; position: relative; }
 .smile {
 	.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
 	.emoji-mart-emoji {
-		span { height: 100%; display: inline-block; vertical-align: middle; /*background-image: url('~img/emoji.png') !important;*/ }
+		span { height: 100%; display: inline-block; vertical-align: middle; }
 	}
 	
-	.icon.blank { 
-		position: absolute; left: 50%; top: 50%; width: 16px; height: 16px; margin: -8px 0px 0px -8px; 
-		background-image: url('~img/blank/smile.svg'); 
-	}
+	.icon.blank { position: absolute; left: 50%; top: 50%; background-image: url('~img/blank/smile.svg'); }
+}
+
+.smile.c20 { width: 20px; height: 20px; line-height: 20px; }
+.smile.c20 {
+	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
+	.icon.blank { width: 16px; height: 16px; margin: -8px 0px 0px -8px; }
 }
 
 .smile.c24 { width: 24px; height: 24px; line-height: 24px; }
