--- a/src/scss/component/footer.scss
+++ b/src/scss/component/footer.scss
@@ -12,4 +12,5 @@
 	}
 	
 	.plusBig.dark { border: 1px solid #dfddd0; }
+	.plusBig.dark:hover { border-color: $colorBlack; background-color: #f7f5f0; }
 }
