--- a/src/scss/component/footer.scss
+++ b/src/scss/component/footer.scss
@@ -8,9 +8,10 @@
 	
 	.plusBig { 
 		width: 48px; height: 48px; background-color: #fff; border-radius: 100%; position: fixed; left: 12px; bottom: 12px; z-index: 10;
-		background-image: url('~img/icon/plus/big.svg'); background-size: 24px 24px; cursor: pointer;
+		background-image: url('~img/icon/plus/big0.svg'); background-size: 24px 24px; cursor: pointer;
 	}
+	.plusBig:hover { background-image: url('~img/icon/plus/big1.svg'); }
 	
 	.plusBig.dark { border: 1px solid #dfddd0; }
-	.plusBig.dark:hover { border-color: $colorBlack; background-color: #f7f5f0; }
+	.plusBig.dark:hover { border-color: $colorBlack; }
 }
