menu colors update

--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -79,19 +79,19 @@
 		}
 		
 		.item.withDescription.yellow {
-			.icon { background-color: #fef3c5; }  
+			.icon { background-color: #ffee94; }  
 		}
 		.item.withDescription.green {
-			.icon { background-color: #d6f5f3; }  
+			.icon { background-color: #b8f1a4; }  
 		}
 		.item.withDescription.blue {
-			.icon { background-color: #d6effd; }  
+			.icon { background-color: #b2e3f9; }  
 		}
 		.item.withDescription.red {
-			.icon { background-color: #ffebe5; }  
+			.icon { background-color: #ffd6c9; }  
 		}
 		.item.withDescription.purple {
-			.icon { background-color: #f4e3fa; }  
+			.icon { background-color: #f1cdfb; }  
 		}
 		
 		.section { border-bottom: 1px solid $colorLightGrey; padding: 8px 0px; }
