--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -9,11 +9,9 @@
 	}
 	
 	.menu.menuBlockAdd { width: 360px !important; padding: 12px 0px; }
-	
-	.menu.menuBlockColor {
-		.content { max-height: 500px; }
+	.menu.menuBlockAdd {
+		.content { max-height: 362px; }
 	}
-	
 	.menu.menuBlockAdd {
 		.item.withColor {
 			.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
