#304 profile subscription, removed account image

--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -3,7 +3,7 @@
 .pageMainIndex {
 	.wrapper { position: relative; z-index: 1; padding: 90px 0px 0px 0px; margin: 0px auto; }
 	
-	.title { color: #fff; position: relative; }
+	.title { color: #fff; position: relative; height: 40px; }
 	.title {
 		.rightMenu { position: absolute; right: 0px; top: 0px; }
 		.icon { width: 40px; height: 40px; vertical-align: top; margin-right: 8px; border-radius: 100%; cursor: pointer; }
