--- a/src/scss/popup/tree.scss
+++ b/src/scss/popup/tree.scss
@@ -10,6 +10,26 @@
 			.icon.search { margin-right: 8px; vertical-align: top; }
 			.input { padding: 0px; height: 24px; vertical-align: top; width: calc(100% - 32px); }
 		}
+
+		.path { padding:  8px 12px 0px 12px; white-space: nowrap; }
+		.path {
+			.item { display: inline-block; vertical-align: top; color: #6c6a5f; margin-right: 4px; cursor: pointer; transition: color 0.2s ease-in-out; }
+			.item {
+				.icon { margin-right: 4px; }
+				.icon.arrow { margin: 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
+				.smile { margin-right: 4px; }
+				.name { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 20px; }
+			}
+			.item:last-child { margin: 0px; }
+			.item:last-child {
+				.icon.arrow { display: none; }
+				.name { margin: 0px; }
+			}
+			.item:hover { color: $colorBlack; }
+			.item:hover {
+				.icon.home { background-image: url('~img/icon/home1.svg'); }
+			}
+		}
 		
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
 		.empty {
