--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -73,5 +73,15 @@ html.debug {
 				.name { background-color: rgba(0,0,255,0.1); line-height: 24px; height: 24px; }
 			}
 		}
+
+		.popupTree {
+			.path {
+				.item {
+					.icon { background-color: rgba(0,0,255,0.1); }
+					.smile { background-color: rgba(0,0,255,0.1); }
+					.name { background-color: rgba(0,0,255,0.1); }
+				}
+			}
+		}
 	};
 } 
