--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -19,3 +19,4 @@ $transitionFast: all 0.2s ease-in-out;
 @mixin text-very-small { font-size: 11px; line-height: 18px; letter-spacing: 0.4px; color: $colorDarkGrey; }
 @mixin text-small { font-size: 12px; line-height: 18px; letter-spacing: 0.32px; }
 @mixin text-common { font-size: 14px; line-height: 22px; letter-spacing: 0.2px; }
+@mixin text-paragraph { font-size: 16px; line-height: 24px; letter-spacing: 0.08px; }
