--- a/src/scss/component/textarea.scss
+++ b/src/scss/component/textarea.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .textarea {
-	width: 100%; height: 100px; resize: none; font-size: 14px; border: 0px; background: #f7f5f0; padding: 20px;
-	line-height: 24px; letter-spacing: -0.12px; color: $colorBlack; display: block; font-family: 'Mono'; 
+	width: 100%; resize: none; font-size: 14px; border: 0px; background: #f7f5f0; padding: 20px;
+	line-height: 22px; letter-spacing: -0.12px; color: $colorBlack; display: block; font-family: 'Mono'; 
 }
 .textarea::placeholder { color: #d2d0c2; }
 
