--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -12,7 +12,7 @@
 			background: rgba(255,255,255, 0.7);
 		}
 	
-		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 16px; }
+		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 18px; }
 		.inputs { margin-bottom: 32px; }
 		
 		.head { 
@@ -30,9 +30,14 @@
 		}
 		
 		.tab { padding: 70px 48px 48px 48px; }
+
+		.tabIndex { padding: 45px 48px 48px 48px; }
 		.tabIndex {
 			.rows { margin-bottom: 20px; }
-			.row { padding: 22px 0px; border-bottom: 1px solid #eae9e0; cursor: pointer; position: relative; }
+			.row { 
+				padding: 18px 0px; border-bottom: 1px solid #eae9e0; cursor: pointer; position: relative; 
+				@include text-paragraph;
+			}
 			.row.flex { display: flex; }
 			.row {
 				.icon { width: 28px; height: 28px; margin: -2px 12px 0px 0px; }
@@ -51,21 +56,21 @@
 				.status { position: absolute; text-align: right; right: 24px; top: 50%; margin-top: -11px; height: 24px; color: $colorDarkGrey; }
 			}
 			
-			.logout { color: $colorDarkGrey; cursor: pointer; text-align: center; }
+			.logout { color: $colorDarkGrey; cursor: pointer; text-align: center; @include text-paragraph; }
 			.logout:hover { color: $colorBlack; }
 		}
 		
 		.tabWallpaper { overflow-y: scroll; height: 520px; }
 		
 		.tabWallpaper {
-			.covers { margin-left: -4px; width: 596px; }
+			.covers { margin-left: -2px; width: 596px; }
 			
 			.row { margin-bottom: 8px; }
 			.row.first { margin-bottom: 24px; }
 			.row.last { margin: 0px; }
 			
 			.label { margin-bottom: 8px; } 
-			.label.name { margin-bottom: 11px; @include text-small; color: $colorDarkGrey; text-transform: uppercase; }
+			.label.name { margin-bottom: 11px; @include text-very-small; color: $colorDarkGrey; text-transform: uppercase; }
 			
 			.item { 
 				width: 108px; height: 70px; display: inline-block; vertical-align: top; margin: 0px 10px 16px 0px; cursor: pointer;
@@ -75,7 +80,7 @@
 			.item:hover, .item.active:hover { border: 2px solid $colorOrange; }
 			.item.active { border: 1px solid $colorLightGrey; }
 			
-			.item.fileWrap { margin: 0px; }
+			.item.fileWrap { margin: 0px 0px 0px -2px; }
 			
 			.item {
 				.cover.upload { 
@@ -89,7 +94,7 @@
 		
 		.tabPhrase {
 			.label { margin-bottom: 25px; }
-			.textarea { border-radius: 4px; padding: 24px 32px; color: $colorIce; }
+			.textarea { border-radius: 4px; padding: 20px 24px; color: $colorIce;  }
 		}
 		
 		.tabPinIndex {
@@ -97,7 +102,7 @@
 		}
 		
 		.tabPinIndex, .tabPinSelect, .tabPinConfirm {
-			.label { margin-bottom: 10px; }
+			.label { margin-bottom: 23px; }
 			.input { 
 				width: 40px; height: 40px; margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px;
 				border: 1px solid #e0ded2; 
@@ -108,9 +113,13 @@
 			
 			.button.blank { 
 				padding: 20px 0px; width: 100%; display: block; height: auto; line-height: 24px; background: none; color: #e89d00;
-				border: 0px; border-radius: 0px; border-bottom: 1px solid #eae9e0;
+				border: 0px; border-radius: 0px; border-bottom: 1px solid #eae9e0; @include text-paragraph; font-weight: 400;
 			}
 			.button.blank:hover { color: $colorBlack; }
+
+			.button.blank {
+				.txt { line-height: inherit; }
+			}
 		}
 
 	}
