--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockBookmark { margin: 7px 0px; }
+	.block.blockBookmark { padding: 6px 0px; }
 	.block.blockBookmark {
 		.dropTarget { border-radius: 6px; }
 	
