--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -24,15 +24,15 @@
 .cover.type1.c16 { background-image: url('~img/cover/6.jpg'); }
 .cover.type1.c17 { background-image: url('~img/cover/7.jpg'); }
 
-.cover.type2.yellow { background: $colorYellow; }
-.cover.type2.orange { background: $colorOrange; }
-.cover.type2.red { background: $colorRed; }
-.cover.type2.pink { background: $colorPink; }
-.cover.type2.purple { background: $colorPurple; }
-.cover.type2.blue { background: $colorBlue; }
-.cover.type2.ice { background: $colorIce; }
-.cover.type2.teal { background: $colorTeal; }
-.cover.type2.green { background: $colorLime; }
+.cover.type2.yellow { background: #FEE874; }
+.cover.type2.orange { background: #FFB522; }
+.cover.type2.red { background: #F55522; }
+.cover.type2.pink { background: #EFAEA1; }
+.cover.type2.purple { background: #6A1036; }
+.cover.type2.blue { background: #2869E9;; }
+.cover.type2.ice { background: #88CDF3; }
+.cover.type2.teal { background: #9BB0B7; }
+.cover.type2.green { background: #136E41; }
 .cover.type2.lightgrey { background: $colorLightGrey; }
 .cover.type2.darkgrey { background: $colorDarkGrey; }
 .cover.type2.black { background: $colorBlack; }
