--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -18,6 +18,7 @@
 
 .smile.c24 { width: 24px; height: 24px; line-height: 24px; }
 .smile.c24 {
+	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
 	.icon.blank { width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
 }
 
