--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -18,7 +18,7 @@
 		.icon.blockStyle.active.code { background-image: url('~img/icon/menu/style/code.svg'); }
 		
 		.icon.active.bold { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
-		.icon.active.code { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
+		.icon.active.kbd { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
 		.icon.active.italic { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
 		.icon.active.link { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
 		.icon.active.strike { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
