--- a/src/scss/menu/block/cover.scss
+++ b/src/scss/menu/block/cover.scss
@@ -10,6 +10,7 @@
 			.btn:last-child { margin: 0px; }
 		}
 		
+		.section > .name { margin-bottom: 6px; }
 		.section:first-child { padding-top: 8px; }
 		.section:last-child { padding-bottom: 8px; }
 		
