--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -9,10 +9,13 @@
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
 			width: 12px; background-size: 2px 10px; opacity: 0; cursor: grab; vertical-align: top; 
-			border: 1px solid #dfddd0; border-radius: 12px; height: 100%; transition: $transitionFast; margin-right: 6px;
+			border: 1px solid #dfddd0; box-shadow: 0px 0px 0px 0px rgba(255,255,255, 0); border-radius: 12px; height: 100%; transition: $transitionFast; margin-right: 6px;
 			background-image: url('~img/icon/block/menu0.svg');
 		}
-		.icon.dnd:hover { background-image: url('~img/icon/block/menu2.svg'); border: 2px solid $colorOrange; }
+		.icon.dnd:hover { 
+			background-image: url('~img/icon/block/menu2.svg'); border-color: $colorOrange; 
+			box-shadow: 0px 0px 0px 1px $colorOrange;
+		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; }
 		.colResize.active { opacity: 1; }
