--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -2,7 +2,7 @@
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important;  }
+		.block { border: 0px; width: 100% !important; padding: 0px !important;  }
 		.block {
 			.wrapMenu { display: none; }
 			.wrapContent { width: 100%; padding-left: 4px; }
