--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -1,16 +1,16 @@
 @import "~scss/_vars";
 
 .linkPreview {
-	position: absolute; left: 0px; top: 0px; width: 320px; height: 152px; z-index: 100; display: none; opacity: 0; 
+	position: absolute; left: 0px; top: 0px; width: 320px; height: 158px; z-index: 100; display: none; opacity: 0; 
 	transition: opacity 0.2s ease-in-out;
 }
-.linkPreview.withImage { height: 264px; }
+.linkPreview.withImage { height: 268px; }
 
 .linkPreview {
 	.content { background: #fff; box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.35); border-radius: 8px; position: relative; height: 100%; }
 	.loaderWrapper { margin: 0px; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
-	.name { @include text-common; height: 22px; color: $colorBlack; @include text-overflow-nw;  }
-	.descr { @include text-small; height: 36px; color: #6c6a5f; margin: 2px 0px 5px 0px; @include text-overflow; }
+	.name { @include text-common; height: 22px; color: $colorBlack; @include text-overflow-nw; margin-bottom: 3px; }
+	.descr { @include text-small; height: 36px; color: #6c6a5f; margin: 2px 0px 7px 0px; @include text-overflow; }
 	.link { @include text-small; height: 18px; color: $colorBlack; @include text-overflow-nw;  }
 	.polygon { position: absolute; left: 0px; width: 100%; cursor: pointer; }
 		
@@ -19,28 +19,27 @@
 		background-size: cover; background-position: center center; border-bottom: 1px solid #eae9e0;
 	}
 		
-	.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
+	.icon.fav { width: 16px; height: 16px; margin: -4px 6px 0px 0px; }
 	
 	.head { 
-		padding: 8px 16px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: 500; position: absolute; left: 0px; width: 100%;
-		height: 40px; 
+		padding: 10px 16px 10px 16px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: 500; position: absolute; left: 0px; width: 100%;
 	}
 	.head {
-		.item { display: inline-block; vertical-align: middle; margin-right: 16px; cursor: pointer; transition: $transitionFast; }
+		.item { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; transition: $transitionFast; }
 		.item:hover { color: $colorBlack; }
 		.item:last-child { margin: 0px; }
 	}
 	
-	.info { padding: 16px; }
+	.info { padding: 15px 15px 12px 15px; }
 }
 
 .linkPreview.top {
-	.head { border-top: 1px solid #eae9e0; bottom: 0px; }
-	.content { padding-bottom: 40px; }
+	.head { border-top: 1px solid #eae9e0; bottom: 0px; padding-bottom: 11px; }
+	.content { padding-bottom: 44px; }
 	.img { border-radius: 8px 8px 0px 0px; border-top: 0px; }
 }
 
 .linkPreview.bottom {
-	.head { border-bottom: 1px solid #eae9e0; top: 0px; }
-	.content { padding-top: 40px; }
+	.head { border-bottom: 1px solid #eae9e0; top: 0px; padding-top: 11px; }
+	.content { padding-top: 44px; }
 }
