--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -108,7 +108,7 @@
 				border: 1px solid #e0ded2; 
 			}
 			.input.active { box-shadow: 0px 0px 0px 1px $colorOrange inset; border-color: $colorOrange; }
-			.input-password { font-size: 36px; }
+			.input-password { font-size: 14px; line-height: 1; }
 			.input:last-child { margin: 0px; }
 			
 			.button.blank { 
