--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -67,6 +67,7 @@
 	}
 	
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; background-image: url('~img/icon/block/menu1.svg'); }
+	.block.showMenuAdd > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }
 
 	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { border-radius: 0px 0px 4px 4px !important; }
