removed linkId from routes, #195

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -68,7 +68,7 @@ html.debug {
 	.popups {
 		.popupArchive {
 			.item {
-				.check { background-color: rgba(0,0,255,0.1); }
+				.checkbox { background-color: rgba(0,0,255,0.1); }
 				.smile { background-color: rgba(0,0,255,0.1); }
 				.name { background-color: rgba(0,0,255,0.1); line-height: 24px; height: 24px; }
 			}
