--- a/src/scss/popup/common.scss
+++ b/src/scss/popup/common.scss
@@ -15,6 +15,11 @@
 	
 	.popup {
 		.content { opacity: 0; transition: opacity 0.05s ease-in-out; transition-delay: 0.05s; }
+
+		.loaderWrapper { 
+			position: absolute; left: 0px; top: 0px; z-index: 20; width: 100%; height: 100%; border-radius: 12px;
+			background: rgba(255,255,255, 0.7);
+		}
 	}
 	.popup.show {
 		.content { opacity: 1; }
