--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -5,7 +5,7 @@
 	#menu-polygon { z-index: 1000; position: absolute; }
 	
 	.menu { 
-		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; padding: 8px 0px;
+		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; 
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); background: #fff; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
@@ -30,9 +30,9 @@
 		.content { opacity: 1; }
 	}
 	
-	.menu.vertical { width: 208px; padding: 8px 0px; }
+	.menu.vertical { width: 208px; }
 	.menu.vertical {
-		.content { overflow-y: auto; max-height: 450px; }
+		.content { overflow-y: auto; max-height: 450px; padding: 8px 0px; }
 		
 		.filter { border-bottom: 1px solid #eae9e0; padding: 3px 16px 10px 16px; }
 		.filter {
