--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -10,7 +10,8 @@
 			width: 100%; height: 100%; cursor: text; 
 		}
 		
-		a { cursor: pointer; color: inherit; }
+		a { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; height: 22px; text-decoration: none; display: inline-block; }
+		
 		kbd { 
 			display: inline; font-family: 'Mono'; padding: 0px 4px; border-radius: 2px; background: $colorDarkGrey; 
 			background: rgba(172,169,150,0.15); margin: 0px 4px;
@@ -69,7 +70,7 @@
 		padding: 2px 0px 3px 0px;
 	}
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .line { 
-		width: 0px; height: calc(100% + 8px); position: absolute; left: 11px; top: -4px; border-left: 2px solid $colorOrange; 
+		width: 0px; height: calc(100% + 5px); position: absolute; left: 11px; top: -2px; border-left: 2px solid $colorOrange; 
 	}
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 28px; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap > .placeHolder { left: 28px; }
@@ -78,7 +79,7 @@
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget { padding: 35px 16px 16px 16px; background: rgba(247,245,240,0.5); }
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
 	.block.blockText.code {
-		.value { font-family: 'Mono'; }
+		.value { font-family: 'Mono'; @include text-common; }
 		.select { position: absolute; top: 3px; left: 16px; z-index: 1; border: 0px;  color: $colorDarkGrey; @include text-common; }
 		.select {
 			.current { padding: 0px 16px 0px 0px; }
