--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -28,9 +28,6 @@
 			.name { margin: 0px; }
 		}
 		.item:hover { color: $colorBlack; }
-		.item:hover {
-			.icon.home { background-image: url('~img/icon/home1.svg'); }
-		}
 	}
 	
 	.icon.nav { background-image: url('~img/icon/nav0.svg'); }
@@ -41,9 +38,9 @@
 	.icon.back:hover, .icon.forward:hover { background-image: url('~img/icon/back1.svg'); }
 }
 
-.headerMainEdit { background: #fff; padding: 8px 10px 8px 82px; height: 36px; line-height: 20px; }
+.headerMainEdit { background: #fff; padding: 9px 10px 9px 82px; line-height: 20px; }
 .headerMainEdit {
-	.menu { position: absolute; top: 8px; right: 10px; }
+	.menu { position: absolute; top: 9px; right: 10px; }
 	.menu {
 		.icon.more { width: 20px; height: 20px; background-image: url('~img/icon/menu/action/more0.svg'); cursor: pointer; }
 		.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
