--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -24,14 +24,14 @@
 
 .smile.c48 { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
 .smile.c48 {
-	.emoji-mart-emoji { font-size: 24px; height: 28px; line-height: 1em; }
+	.emoji-mart-emoji { margin: -1px 0px 0px 1px; font-size: 24px; height: 28px; line-height: 1em; }
 	.emoji-mart-emoji { span { height: 28px; line-height: 32px; } }
 	.icon.blank { width: 24px; height: 24px; margin: -12px 0px 0px -12px;  }
 }
 
 .smile.c64 { width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; }
 .smile.c64 {
-	.emoji-mart-emoji { font-size: 36px; height: 1em; line-height: 1em; }
+	.emoji-mart-emoji { margin: -1px 0px 0px 0px; font-size: 36px; height: 1em; line-height: 1em; }
 	.emoji-mart-emoji { span { height: 36px; line-height: 36px; } }
 	.icon.blank { width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 }
