--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -25,21 +25,20 @@
 		
 		.tab { padding: 70px 48px 48px 48px; }
 
-		.tabIndex { padding: 45px 48px 48px 48px; }
+		.tabIndex { padding: 45px 48px 28px 48px; }
 		.tabIndex {
-			.rows { margin-bottom: 20px; }
 			.row { 
-				padding: 18px 0px; border-bottom: 1px solid #eae9e0; cursor: pointer; position: relative; 
-				@include text-paragraph;
+				padding: 18px 0px 17px 0px; border-bottom: 1px solid #eae9e0; cursor: pointer; position: relative; 
+				@include text-paragraph; line-height: 28px;
 			}
 			.row.flex { display: flex; }
 			.row {
-				.icon { width: 28px; height: 28px; margin: -2px 12px 0px 0px; }
+				.icon { width: 28px; height: 28px; margin: 0px 12px 0px 0px; vertical-align: top; }
 				.icon.wallpaper { background-image: url('~img/icon/popup/settings/wallpaper.svg'); }
 				.icon.phrase { background-image: url('~img/icon/popup/settings/phrase.svg'); }
 				.icon.pin { background-image: url('~img/icon/popup/settings/pin.svg'); }
 				
-				.label { display: inline-block; vertical-align: middle; font-weight: 500; }
+				.label { display: inline-block; vertical-align: top; }
 				.icon.arrow { 
 					width: 24px; height: 24px; background-image: url('~img/icon/popup/settings/arrow.svg'); position: absolute; right: 0px;
 					top: 50%; margin: -12px 0px 0px 0px; 
@@ -47,10 +46,10 @@
 				
 				.side { width: 50%; }
 				
-				.status { position: absolute; text-align: right; right: 24px; top: 50%; margin-top: -11px; height: 24px; color: $colorDarkGrey; }
+				.status { position: absolute; text-align: right; right: 24px; top: 50%; margin-top: -14px; height: 28px; color: $colorDarkGrey; }
 			}
 			
-			.logout { color: $colorDarkGrey; cursor: pointer; text-align: center; @include text-paragraph; }
+			.logout { color: $colorDarkGrey; cursor: pointer; text-align: center; @include text-paragraph; line-height: 28px; padding: 18px 0px; }
 			.logout:hover { color: $colorBlack; }
 		}
 		
