--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -74,7 +74,7 @@ html.debug {
 			}
 		}
 
-		.popupTree {
+		.popupNavigation {
 			.path {
 				.item {
 					.icon { background-color: rgba(0,0,255,0.1); }
