bookmark without blank image

--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -15,8 +15,8 @@
 	.polygon { position: absolute; left: 0px; width: 100%; cursor: pointer; }
 		
 	.img {
-		width: 100%; height: 112px; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
-		background-size: cover; background-position: center center; border-bottom: 1px solid #eae9e0;
+		width: 100%; height: 112px; background-repeat: no-repeat; background-size: cover; background-position: center center; 
+		border-bottom: 1px solid #eae9e0;
 	}
 		
 	.icon.fav { width: 16px; height: 16px; margin: -4px 6px 0px 0px; }
