--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -12,30 +12,34 @@
 		.inner:hover { border-color: $colorDarkGrey; }
 		
 		.inner {
-			.side.left { width: 66.67%; padding: 11px 16px 10px 16px; }
-			.side.right { width: 33.33%; border-radius: 0px 4px 4px 0px; overflow: hidden; }
+			.side.left { width: 100%; padding: 11px 16px 10px 16px; }
+			.side.right { border-radius: 0px 4px 4px 0px; overflow: hidden; display: none; }
 		}
 		
-		.inner.vertical { display: block; padding-top: 112px; }
+		.inner.vertical { display: block; }
 		.inner.vertical {
 			.side.left { width: 100%; border-radius: 0px; }
 			.side.right { 
 				position: absolute; top: 0px; left: 0px; height: 112px; width: 100%; border-radius: 6px 6px 0px 0px;
 				border-bottom: 1px solid #eae9e0; 
 			}
-			
-			.img { background-position: center center; }
+		}
+
+		.inner.withImage {
+			.side.left { width: 66.67%; }
+			.side.right { width: 33.33%; display: block; }
+		}
+
+		.inner.withImage.vertical { padding-top: 112px; }
+		.inner.withImage.vertical {
+			.side.left { width: 100%; }
+			.side.right { width: 100%; }
 		}
 
 		.name { @include text-common; height: 22px; color: $colorBlack; @include text-overflow-nw; }
 		.descr { @include text-small; height: 36px; color: #6c6a5f; margin: 5px 0px 6px 0px; @include text-overflow; }
 		.link { @include text-small; height: 18px; color: $colorBlack; @include text-overflow-nw; }
-		
-		.img {
-			width: 100%; height: 100%; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
-			background-size: cover; background-position: center center;
-		}
-		
+		.img { width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: center center; }
 		.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
 	}
 	
