--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -17,12 +17,10 @@
 	#hello { transition: opacity 0.5s ease-in-out; }
 	#hello.hide { opacity: 0; }
 	
-	#documents { width: calc(100% + 16px); }
 	#documents {
 		.item { 
 			width: 208px; height: 112px; background: #fff; border-radius: 12px; display: inline-block; vertical-align: top;
 			margin: 0px 16px 16px 0px; padding: 16px; position: relative; cursor: pointer; user-select: none;
-			transition: all 0.05s ease-in-out;
 		}
 		
 		.item {
@@ -32,8 +30,9 @@
 			}
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
+		.item.last { margin-right: 0px; }
 		
-		.item.add { background: rgba(255,255,255,0.65); transition: background 0.2s ease-in-out; }
+		.item.add { background: rgba(255,255,255,0.65); transition: background 0.2s ease-in-out; margin-right: 0px; }
 		.item.add {
 			.icon { 
 				width: 16px; height: 16px; background-image: url('~img/icon/plus/document.svg');
