--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -13,8 +13,8 @@
 		a { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; height: 22px; text-decoration: none; display: inline-block; }
 		
 		kbd { 
-			display: inline; font-family: 'Mono'; padding: 0px 4px; border-radius: 2px; background: $colorDarkGrey; 
-			background: rgba(172,169,150,0.15); margin: 0px 4px;
+			display: inline; font-family: 'Mono'; border-radius: 2px; background: $colorDarkGrey; 
+			background: rgba(172,169,150,0.15);
 		}
 		
 		.markers { white-space: nowrap; }
