--- a/src/scss/block/layout.scss
+++ b/src/scss/block/layout.scss
@@ -21,6 +21,21 @@
 	}
 	.block.blockLayout.c1 > .wrapMenu { display: none; }
 	.block.blockLayout.c1 > .wrapContent { width: 100%; display: flex; flex-flow: column; }
+
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first.blockText.header1 { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockText.header1 { padding-bottom: 0px; }
+
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first.blockText.header2 { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockText.header2 { padding-bottom: 0px; }
+
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first.blockText.header3 { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockText.header3 { padding-bottom: 0px; }
+
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first.blockFile > .wrapContent > .selectable > .dropTarget { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockFile > .wrapContent > .selectable > .dropTarget { padding-bottom: 0px; }
+
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first.blockMedia > .wrapContent > .selectable > .dropTarget { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last.blockMedia > .wrapContent > .selectable > .dropTarget { padding-bottom: 0px; }
 	
 	/* Div */
 	.block.blockLayout.c2 > .wrapMenu { display: none; }
