--- a/src/scss/block/iconPage.scss
+++ b/src/scss/block/iconPage.scss
@@ -2,6 +2,7 @@
 
 .blocks {
 	.block.blockIconPage {
-		.smile { position: relative; z-index: 2; }
+		.smile { position: relative; z-index: 2; overflow: hidden; }
+		.icon.image { width: 100%; }
 	}
 }
