image upload fix

--- a/src/scss/block/iconPage.scss
+++ b/src/scss/block/iconPage.scss
@@ -3,6 +3,6 @@
 .blocks {
 	.block.blockIconPage {
 		.smile { position: relative; z-index: 2; overflow: hidden; }
-		.icon.image { width: 100%; }
+		.icon.image { width: 100%; position: absolute; left: 0px; top: 50%; transform: translateY(-50%); }
 	}
 }
