--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -5,7 +5,7 @@
 	.block.blockLink {
 		.name {
 			display: inline-block; vertical-align: top; height: 24px; letter-spacing: 0.1px; max-width: calc(100% - 30px); border-bottom: 1px solid $colorDarkGrey;
-			padding-top: 1px; cursor: pointer; @include text-overflow-nw;   
+			cursor: pointer; @include text-overflow-nw;   
 		}
 		.smile { margin-right: 6px; }
 		
